cmake_minimum_required(VERSION 2.8)
project( ball_detect )
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(OpenCV_DIR ~/workspace/opencv/installation/OpenCV-master/lib/cmake/opencv4)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( fc draw_circles.cpp )
target_link_libraries( fc ${OpenCV_LIBS} )
